Added metrics pagitations [deploy:3]
